force-app/main/default/objects/Object_Field_Mapping__mdt/Object_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Child metadata type that defines individual field mappings for an Object Mapping Configuration. Each record specifies how a single field should be mapped from source to target object.</description>
    <label>Object Field Mapping</label>
    <pluralLabel>Object Field Mappings</pluralLabel>
</CustomObject>