force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this field mapping is active and should be applied</description>
    <inlineHelpText>Check to enable this field mapping. Uncheck to temporarily disable without deleting the record.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>