force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Formula_Expression__c.field-meta.xml
<CustomField>
    <fullName>Formula_Expression__c</fullName>
    <description>Formula expression to evaluate dynamically at runtime using Formula.builder(). Used when Transformation_Type__c = &apos;FORMULA&apos;. Supports standard Salesforce formula syntax. Example: IF(ISBLANK({!ETM_Role__c}), {!Routing_Method__c}, &apos;MQL to ETM&apos;)</description>
    <inlineHelpText>Enter a Salesforce formula expression. Use {!FieldName} syntax to reference source record fields. Example: IF(ISBLANK({!ETM_Role__c}), {!Routing_Method__c}, &apos;MQL to ETM&apos;)</inlineHelpText>
    <label>Formula Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>