force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Mapping_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Configuration__c</fullName>
    <description>Reference to the parent Object Mapping Configuration that defines the source and target objects</description>
    <inlineHelpText>Select the parent mapping configuration that defines which objects are being mapped.</inlineHelpText>
    <label>Mapping Configuration</label>
    <referenceTo>Object_Mapping_Configuration__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>