force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order in which field mappings should be applied. Lower numbers are processed first.</description>
    <inlineHelpText>Enter a number to control the order of field mapping execution. Lower numbers are processed first. Useful when one field depends on another.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>