force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>API name of the field on the source object (e.g., &apos;Name&apos;, &apos;Status__c&apos;). Leave blank for CONSTANT transformation.</description>
    <inlineHelpText>Enter the API name of the field on the source object. Leave blank if using CONSTANT transformation type.</inlineHelpText>
    <label>Source Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>