force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Source_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Value__c</fullName>
    <description>Expected value in the source field for PICKLIST transformation. Mapping applies only if source field equals this value.</description>
    <inlineHelpText>For PICKLIST transformation: Enter the source field value that triggers this mapping. Leave blank for other transformation types.</inlineHelpText>
    <label>Source Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>