force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>API name of the field on the target object (e.g., &apos;Name&apos;, &apos;Type&apos;, &apos;IsActive&apos;)</description>
    <inlineHelpText>Enter the API name of the field on the target object where the value will be set.</inlineHelpText>
    <label>Target Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>