force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Target_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Value__c</fullName>
    <description>Value to set on target field for PICKLIST or CONSTANT transformation.</description>
    <inlineHelpText>For PICKLIST/CONSTANT: Enter the value to set on the target field. For CONSTANT, this is the hardcoded value. For PICKLIST, this is the mapped value.</inlineHelpText>
    <label>Target Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>