force-app/main/default/objects/Object_Field_Mapping__mdt/fields/Transformation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Type__c</fullName>
    <description>Type of transformation to apply: NONE (direct copy), PICKLIST (value mapping), CONSTANT (hardcoded value), FORMULA (custom logic)</description>
    <inlineHelpText>NONE: Direct field copy | PICKLIST: Map source value to target value | CONSTANT: Set hardcoded value | FORMULA: Custom transformation logic</inlineHelpText>
    <label>Transformation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>CONSTANT</fullName>
            </value>
            <value>
                <fullName>FORMULA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>